--- a/egl.cfg
+++ b/egl.cfg
@@ -1,4 +1,5 @@
-# Copyright (C) 2008 The Android Open Source Project
+#
+# Copyright (C) 2009 Google Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,5 +13,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+#
+# One line per configuration, of the form:
+#
+# D I TAG
+#
+# D: display (0: default)
+# I: implementation (0: software, 1: hardware)
+# TAG: a unique tag
+#
+# The library name loaded by EGL is constructed as (in that order):
+#
+# /system/lib/egl/libGLES_$TAG.so
+# /system/lib/egl/lib{EGL|GLESv1_CM|GLESv2}_$TAG.so
+#
 
-include $(call all-named-subdir-makefiles, boot libsensors recovery)
+
+0 0 android
+0 1 qcom
