--- a/init.sapphire.rc
+++ b/init.sapphire.rc
@@ -1,14 +1,28 @@
+# Copyright (C) 2008 The Android Open Source Project
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 on early-init
     device mtd@misc 0460 radio diag
 
 # Set timeout value for rmnet stats.
-  write /sys/devices/virtual/net/rmnet0/timeout_suspend 5000000
-  write /sys/devices/virtual/net/rmnet0/timeout 18000000
+    write /sys/devices/virtual/net/rmnet0/timeout_suspend 5000000
+    write /sys/devices/virtual/net/rmnet0/timeout 18000000
 
 on boot
 # unmap left alt to avoid console switch
     setkey 0x0 0x38 0x0
-# sapphire reset SEND+MENU+END
+# reset SEND+MENU+END
     setkey 0x0 0xe7 0x706
     setkey 0x0 0x8b 0x707
 
