--- a/init.sapphire.rc
+++ b/init.sapphire.rc
@@ -78,6 +78,12 @@ service dhcpcd_tiwlan0 /system/bin/dhcpcd -ABKL
     disabled
     oneshot
 
+# IP Renew
+# wi-fi
+service iprenew_tiwlan0 /system/bin/dhcpcd -n
+    disabled
+    oneshot
+
 service hciattach /system/bin/hciattach \
     -n -s 115200 /dev/ttyHS0 texasalt 4000000 flow
     user bluetooth
